fixed contrast ration on links for accessibilty

--- a/src/client/resources/styles/_variables.scss
+++ b/src/client/resources/styles/_variables.scss
@@ -5,7 +5,7 @@
     --color-background-dark: #001e26;
     --color-font-dark: #fff1ee;
 
-    --color-highlight-light: #0a9c6c;
+    --color-highlight-light: #00805a;
     --color-highlight-dark: aquamarine;
 
     --color-background: var(--color-background-light);
